added production-close cart page. closes #95

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -109,8 +109,8 @@
             <!-- footer -->
             <div th:replace="fragments/components::footer"></div>
         </div>
-        <!-- ajax cart -->
+        <!-- ajax add book to cart -->
         <a th:href="@{/login}" id="loginLink" style="display: none"></a>
-        <script th:src="@{/js/ajaxCart.js}"></script>
+        <script th:src="@{/js/ajaxAddBook.js}"></script>
     </body>
 </html>
