--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -226,9 +226,9 @@
         </div>
         <script th:src="@{/js/accordion.js}"></script>
         <script th:src="@{/js/searchCriteria.js}"></script>
-        <!-- ajax cart -->
+        <!-- ajax add book to cart -->
         <a th:href="@{/login}" id="loginLink" style="display: none"></a>
-        <script th:src="@{/js/ajaxCart.js}"></script>
+        <script th:src="@{/js/ajaxAddBook.js}"></script>
         <!-- pagination functionality -->
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
