--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -109,9 +109,9 @@
             <div th:replace="fragments/components::footer"></div>
         </div>
         <script th:src="@{/js/enableTooltips.js}"></script>
-        <!-- ajax cart -->
+        <!-- ajax add book to cart -->
         <a th:href="@{/login}" id="loginLink" style="display: none"></a>
-        <script th:src="@{/js/ajaxCart.js}"></script>
+        <script th:src="@{/js/ajaxAddBook.js}"></script>
         <!-- pagination -->
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
